RESOLVED FIXED203906
Screen locks while watching previously-muted-then-unmuted video
https://bugs.webkit.org/show_bug.cgi?id=203906
Summary Screen locks while watching previously-muted-then-unmuted video
Jer Noble
Reported 2019-11-06 10:23:44 PST
Screen locks while watching previously-muted-then-unmuted video
Attachments
Patch (4.07 KB, patch)
2019-11-06 10:40 PST, Jer Noble
no flags
Patch for landing (3.98 KB, patch)
2019-11-06 13:12 PST, Jer Noble
no flags
Jer Noble
Comment 1 2019-11-06 10:24:09 PST
Jer Noble
Comment 2 2019-11-06 10:40:07 PST
Eric Carlson
Comment 3 2019-11-06 11:01:26 PST
Comment on attachment 382939 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=382939&action=review > LayoutTests/media/video-unmuted-after-play-holds-sleep-assertion.html:10 > + var loader; > + var source; > + var sourceBuffer; Nit: copy-pasta
Jer Noble
Comment 4 2019-11-06 13:12:49 PST
Created attachment 382952 [details] Patch for landing
WebKit Commit Bot
Comment 5 2019-11-06 15:56:48 PST
Comment on attachment 382952 [details] Patch for landing Clearing flags on attachment: 382952 Committed r252156: <https://trac.webkit.org/changeset/252156>
WebKit Commit Bot
Comment 6 2019-11-06 15:56:50 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.