Screen locks while watching previously-muted-then-unmuted video https://bugs.webkit.org/show_bug.cgi?id=203906 <rdar://problem/55821375>

Reviewed by Eric Carlson.

Source/WebCore:

Test: media/video-unmuted-after-play-holds-sleep-assertion.html

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::setMuted):

LayoutTests:

* media/video-unmuted-after-play-holds-sleep-assertion-expected.txt: Added.
* media/video-unmuted-after-play-holds-sleep-assertion.html: Added.


Canonical link: https://commits.webkit.org/217263@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252156 268f45cc-cd09-0410-ab3c-d52691b4dbfc